added img config output and rollback for version without react app

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,30 @@
 	<title>Webpack</title>
 </head>
 <body>
-<div id="app"></div>
+<div id="app">
+	<div class="container">
+		<h1>Webpack course</h1>
+		
+		<hr>
+		
+		<div class="logo"></div>
+		
+		<img src="img/webpack-logo.png" width=100px height=100px alt="Лого">
+		
+		<hr>
+	
+		<pre></pre>
+	
+		<hr>
+		
+		<div class="box">
+			<h2>less</h2>
+		</div>
+		
+		<div class="card">
+			<h2>SCSS</h2>
+		</div>
+	</div>
+</div>
 </body>
 </html>
